--- a/PracticeProbability_401_A.ipynb
+++ b/PracticeProbability_401_A.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Certainly! Here are some Python challenges with pseudo-code to practice probability and visualization, skills that are critical in machine learning:\n",
+        "Here are some Python challenges with pseudo-code to practice probability and visualization, skills that are critical in machine learning:\n",
         "\n",
         "### Challenge 1: Coin Toss Simulation\n",
         "\n",
